<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="about">By @bicnicfr</string>
    <string name="about_title">About TMH</string>
    <string name="stats_filter_cat_title">Categories exception</string>
    <string name="back">Back</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="minus_symbol">-</string>
    <string name="plus_symbol">+</string>
    <string name="currency_code">Code</string>
    <string name="app_name">Traveler Money Helper</string>
    <string name="error">Error</string>
    <string name="error_add_object">Impossible to add object, error in fields !</string>
    <string name="error_no_category">No category is defined, please create one !</string>
    <string name="error_currency_update">Error updating currency, code not found</string>
    <string name="error_no_oer_api_key">To use currencies, please create an account on the following website : http://openexchangerates.org (it is free for personal use) and copy API key you will get on the next screen.</string>
    <string name="error_network_issue">Network problem or network not available, please retry</string>
    <string name="error_oer_apikey_invalid">API key is invalid, please correct !</string>
    <string name="activity_title_edition_category">Category edition</string>
    <string name="activity_title_edition_currency">Currency edition</string>
    <string name="activity_title_edition_operation">Operation edition</string>
    <string name="activity_title_edition_account">Account edition</string>
    <string name="activity_title_edition_withdrawal">Withdrawal edition</string>
    <string name="account_icon_edit_dialog_title">Choose an icon from …</string>
    <string name="manageable_obj_del_confirm_question">Are you sure you want to delete these objects ?</string>
    <string name="manageable_obj_del_error">One or more objects could not be deleted</string>
    <string name="activity_title_manage_category">Category</string>
    <string name="activity_title_manage_currency">Currency</string>
    <string name="activity_title_manage_operation">Operation</string>
    <string name="activity_title_manage_account">Account</string>
    <string name="activity_title_statistics">Statistics</string>
    <string name="activity_title_category_chooser">Categories</string>
    <string name="name">Name</string>
    <string name="long_name">Long name</string>
    <string name="short_name">Short name</string>
    <string name="form_addedit_value">Value for 1</string>
    <string name="form_addedit_update">Set last update to now</string>
    <string name="type">Type</string>
    <string name="account">Account</string>
    <string name="category">Category</string>
    <string name="amount">Amount</string>
    <string name="currency">Currency</string>
    <string name="icon">Icon</string>
    <string name="cancel">Cancel</string>
    <string name="close">X</string>
    <string name="dialog_choose_icon">Choose an icon</string>
    <string name="dialog_choose_account">Choose an account</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edition">Edition</string>
    <string name="categories">Categories</string>
    <string name="currencies">Currencies</string>
    <string name="accounts">Accounts</string>
    <string name="home">Home</string>
    <string name="parameters">Parameters</string>
    <string name="refresh">Refresh</string>
    <string name="popup_default_icon">Default icon</string>
    <string name="popup_app_icon">App icon</string>
    <string name="popup_flag_icon">Flags library</string>
    <string name="popup_url">URL</string>
    <string name="popup_camera">Camera</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="save_and_add">Save and add</string>
    <string name="toast_success">Operation successfully completed</string>
    <string name="pick_account">Pick an account</string>
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
    <string name="not_implemented">This feature is not yet implemented</string>
    <string name="validate">Validate</string>
    <string name="hint_flag_autocompletion">Use this autocompletion field to choose a country flag</string>
    <string name="country">Country</string>
    <string name="country_not_found">Country not found !</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="default_account_name">Account1</string>
    <string name="menu_item_withdrawal">Widthdrawal</string>
    <string name="confirm_modification">Do you confirm modification ?</string>
    <string name="total">Total:</string>
    <string name="total_">Total</string>
    <string name="average">Average:</string>
    <string name="average_">Average</string>
    <string name="averageByDay">Average / day:</string>
    <string name="averageByDay_">Average / day</string>
    <string name="update_exchange_rate">Update exchange rate to current</string>
    <string name="date">Date</string>
    <string name="database_created_successfuly">Database created and selected</string>
    <string name="database">Database</string>
    <string name="new_database">New database</string>
    <string name="select_database">Select database to use</string>
    <string name="enter_database_name">Enter a database name</string>
    <string name="new_database_summary">Add a new Database</string>
    <string name="menu_item_more">More</string>
    <string name="menu_item_period">Period / Month</string>
    <string name="menu_item_now">Today</string>
    <string name="default_category_withdrawal_summary">Select default category for withdrawal</string>
    <string name="default_category_withdrawal">Withdrawal category</string>
    <string name="default_account_summary">Enter the default account</string>
    <string name="default_account_title">Default account</string>
    <string name="oer_api_key_summary">Enter Open Exchange Rates API key</string>
    <string name="oer_api_key_title">Open Exchange Rates API</string>
    <string name="warning">Warning</string>
    <string name="default_category_warning">Choose a default category for withdrawal (inside preferences)</string>
    <string name="set_to_today_button">Today\'s date</string>
    <string name="balance">Balance:</string>
    <string name="dashboard_operation">Operations</string>
    <string name="dashboard_stats">Statistics</string>
    <string name="welcome_title">Some elements must be created in order to use this application :</string>
    <string name="welcome_letsgo_button">Let\'s go !</string>
    <string name="welcome_button">Go</string>
    <string name="welcome_category">Create a category</string>
    <string name="welcome_currency">Create a currency</string>
    <string name="welcome_account">Create an account</string>
    <string name="update">Update</string>
    <string name="graph">Graph</string>
    <string name="refreshing">Refreshing</string>

</resources>