<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="Persistence" >

        <ListPreference
            android:id="@+id/database"
            android:defaultValue="0"
            android:key="database"
            android:summary="@string/select_database"
            android:title="@string/database" />

        <EditTextPreference
            android:id="@+id/new_database"
            android:defaultValue=""
            android:dialogMessage="@string/enter_database_name"
            android:dialogTitle="@string/new_database"
            android:key="new_database"
            android:summary="@string/new_database_summary"
            android:title="@string/new_database" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Default parameters" >

        <ListPreference
            android:id="@+id/def_account"
            android:defaultValue="0"
            android:enabled="false"
            android:key="account"
            android:summary="Select default account to use"
            android:title="Default account" />

        <ListPreference
            android:id="@+id/category_withdrawal"
            android:defaultValue="0"
            android:enabled="false"
            android:key="category"
            android:summary="Select default category for withdrawal"
            android:title="Default category" />
    </PreferenceCategory>

</PreferenceScreen>