<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="3dip"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:paddingTop="3dip" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:text="@string/account" />

                <Spinner
                    android:id="@+id/account"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="3dip"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:paddingTop="3dip" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:text="@string/category" />

                <Spinner
                    android:id="@+id/category"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="3dip"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:paddingTop="3dip" >

                <RadioButton
                    android:id="@+id/debit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/debit" />

                <RadioButton
                    android:id="@+id/credit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/credit" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="3dip"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:paddingTop="3dip" >

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3"
                    android:text="@string/amount" />

                <TextView
                    android:id="@+id/sign"
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.7"
                    android:gravity="left|center_vertical"
                    android:paddingRight="5dip"
                    android:text="@string/minus_symbol"
                    android:textColor="@color/red"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <org.maupu.android.tmh.ui.widget.NumberEditText
                    android:id="@+id/amount"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/converted_amount"
                    android:layout_marginLeft="10dip"
                    android:layout_width="0dip"
                    android:layout_height="fill_parent"
                    android:layout_gravity="right|center_vertical"
                    android:gravity="right|center_vertical"
                    android:textSize="10sp"
                    android:layout_weight="1.3"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_exchange_rate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="3dip"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:paddingTop="3dip"
                android:visibility="gone" >

                <CheckBox
                    android:id="@+id/checkbox_update_rate"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/update_exchange_rate"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="3dip"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:paddingTop="3dip" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:text="@string/currency" />

                <Spinner
                    android:id="@+id/currency"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="3dip"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:paddingTop="3dip" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:text="@string/date" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="false"
                        android:textColor="@color/blue"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/button_today"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignRight="@id/date"
                        android:layout_centerVertical="true"
                        android:text="@string/set_to_today_button" />

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignRight="@id/date"
                        android:layout_below="@id/date"
                        android:layout_centerVertical="false"
                        android:textColor="@color/blue"
                        android:textSize="12sp"
                        android:textStyle="italic" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>